--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
         @apply p-2 border border-gray-300 rounded-md focus:outline-none focus:border-gray-200 text-sm bg-transparent caret-white text-white;
     }
     .nav-button{
-        @apply cursor-pointer rounded-lg hover:bg-slate-500 p-2 box-border align-middle hover:text-slate-800
+        @apply cursor-pointer rounded-lg hover:bg-slate-500 p-2 box-border align-middle hover:text-slate-800 transition-all duration-150
     }
     .icon-size{
         @apply w-8 h-8
